--- a/using/windows.po
+++ b/using/windows.po
@@ -312,8 +312,8 @@ msgid ""
 "The following options (found by executing the installer with ``/?``) can be "
 "passed into the installer:"
 msgstr ""
-"Las siguientes opciones (encontradas al ejecutar el instalador con /?) pueden "
-"ser pasadas al instalador"
+"Las siguientes opciones (encontradas al ejecutar el instalador con /?) "
+"pueden ser pasadas al instalador"
 
 #: ../Doc/using/windows.rst:133 ../Doc/using/windows.rst:153
 #: ../Doc/using/windows.rst:1082
@@ -1740,11 +1740,12 @@ msgid ""
 "following :pep:`514` will be discoverable. The ``--list`` command lists all "
 "available runtimes using the ``-V:`` format."
 msgstr ""
-"El argumento ``-x.y`` es la forma corta del argumento ``-V:Company/Tag``, que permite "
-"seleccionar un entorno de ejecución Python específico, incluidos aquellos que "
-"pueden haber provenido de lugares diferentes a python.org. Cualquier entorno "
-"registrado siguiendo el :pep:`514` será detectable. El comando ``--list`` muestra todos "
-"los entornos disponibles usando el formato ``-V:``."
+"El argumento ``-x.y`` es la forma corta del argumento ``-V:Company/Tag``, "
+"que permite seleccionar un entorno de ejecución Python específico, incluidos "
+"aquellos que pueden haber provenido de lugares diferentes a python.org. "
+"Cualquier entorno registrado siguiendo el :pep:`514` será detectable. El "
+"comando ``--list`` muestra todos los entornos disponibles usando el formato "
+"``-V:``."
 
 #: ../Doc/using/windows.rst:763
 msgid ""
@@ -1753,9 +1754,9 @@ msgid ""
 "from all providers. Note that omitting the slash implies a tag::"
 msgstr ""
 "Al usar el argumento ``-V:``, especificar la Compañía limitará la selección "
-"a entornos de ese proveedor, mientras que especificar solo la Etiqueta seleccionará "
-"de todos los proveedores. Tenga en cuenta que omitir la barra implica una etiqueta:"
-
+"a entornos de ese proveedor, mientras que especificar solo la Etiqueta "
+"seleccionará de todos los proveedores. Tenga en cuenta que omitir la barra "
+"implica una etiqueta:"
 
 #: ../Doc/using/windows.rst:776
 msgid ""
@@ -1775,12 +1776,13 @@ msgid ""
 "``3.10``. Tags are sorted using numerical ordering (``3.10`` is newer than "
 "``3.1``), but are compared using text (``-V:3.01`` does not match ``3.1``)."
 msgstr ""
-"La Compañía se compara con la cadena completa, sin distinguir entre mayúsculas "
-"y minúsculas. La Etiqueta se compara ya sea con la cadena completa o con un prefijo, "
-"siempre que el siguiente carácter sea un punto o un guión. Esto permite que ``-V:3.1`` "
-"coincida con ``3.1-32``, pero no con ``3.10``. Las etiquetas se ordenan numéricamente"
-"(``3.10`` es más reciente que ``3.1``), pero se comparan usando texto (``-V:3.01`` no "
-"coincide con ``3.1``)."
+"La Compañía se compara con la cadena completa, sin distinguir entre "
+"mayúsculas y minúsculas. La Etiqueta se compara ya sea con la cadena "
+"completa o con un prefijo, siempre que el siguiente carácter sea un punto o "
+"un guión. Esto permite que ``-V:3.1`` coincida con ``3.1-32``, pero no con "
+"``3.10``. Las etiquetas se ordenan numéricamente(``3.10`` es más reciente "
+"que ``3.1``), pero se comparan usando texto (``-V:3.01`` no coincide con "
+"``3.1``)."
 
 #: ../Doc/using/windows.rst:788
 msgid "Virtual environments"
@@ -1838,7 +1840,8 @@ msgstr ""
 "reciente de Python 3.x. Al igual que con los ejemplos de línea de comandos "
 "anteriores, puede especificar un calificador de versión más explícito. "
 "Suponiendo que tiene instalado Python 3.7, intente cambiar la primera línea "
-"a ``#! python3.7`` y debería encontrar la información de la versión 3.7 impresa."
+"a ``#! python3.7`` y debería encontrar la información de la versión 3.7 "
+"impresa."
 
 #: ../Doc/using/windows.rst:828
 msgid ""
@@ -1994,17 +1997,17 @@ msgid ""
 "`PYLAUNCHER_NO_SEARCH_PATH` may be set (to any value) to skip this search "
 "of :envvar:`PATH`."
 msgstr ""
-"La forma ``/usr/bin/env`` de la línea shebang tiene una propiedad especial adicional. "
-"Antes de buscar intérpretes de Python instalados, esta forma buscará en "
-"el ejecutable :envvar:`PATH` un ejecutable de Python que coincida con el nombre proporcionado "
-"como primer argumento. Esto corresponde al "
-"comportamiento del programa Unix ``env``, que realiza una búsqueda en :envvar:"
-"`PATH`. Si no se puede encontrar un ejecutable que coincida con el primer "
-"argumento después del comando ``env`` pero el "
-"argumento comienza con ``python``, será manejado como se describe para los "
-"otros comandos virtuales. La variable de entorno :envvar:"
-"`PYLAUNCHER_NO_SEARCH_PATH` puede ser establecida (a cualquier valor) para "
-"omitir esta búsqueda en :envvar:`PATH`."
+"La forma ``/usr/bin/env`` de la línea shebang tiene una propiedad especial "
+"adicional. Antes de buscar intérpretes de Python instalados, esta forma "
+"buscará en el ejecutable :envvar:`PATH` un ejecutable de Python que coincida "
+"con el nombre proporcionado como primer argumento. Esto corresponde al "
+"comportamiento del programa Unix ``env``, que realiza una búsqueda en :"
+"envvar:`PATH`. Si no se puede encontrar un ejecutable que coincida con el "
+"primer argumento después del comando ``env`` pero el argumento comienza con "
+"``python``, será manejado como se describe para los otros comandos "
+"virtuales. La variable de entorno :envvar:`PYLAUNCHER_NO_SEARCH_PATH` puede "
+"ser establecida (a cualquier valor) para omitir esta búsqueda en :envvar:"
+"`PATH`."
 
 #: ../Doc/using/windows.rst:905
 msgid ""
@@ -2016,13 +2019,13 @@ msgid ""
 "executable (additional arguments specified in the .INI will be quoted as "
 "part of the filename)."
 msgstr ""
-"Las líneas Shebang que no coincidan con ninguno de estos patrones se buscan en la sección "
-"``[commands]`` del :ref:`archivo .INI <launcher-ini>` del lanzador. "
-"Esto se puede usar para manejar ciertos comandos de una manera que tenga sentido para "
-"tu sistema. El nombre del comando debe ser un único argumento (sin espacios en "
-"el ejecutable shebang), y el valor sustituido es la ruta completa al "
-"ejecutable (los argumentos adicionales especificados en el .INI se citarán como "
-"parte del nombre del archivo)."
+"Las líneas Shebang que no coincidan con ninguno de estos patrones se buscan "
+"en la sección ``[commands]`` del :ref:`archivo .INI <launcher-ini>` del "
+"lanzador. Esto se puede usar para manejar ciertos comandos de una manera que "
+"tenga sentido para tu sistema. El nombre del comando debe ser un único "
+"argumento (sin espacios en el ejecutable shebang), y el valor sustituido es "
+"la ruta completa al ejecutable (los argumentos adicionales especificados en "
+"el .INI se citarán como parte del nombre del archivo)."
 
 #: ../Doc/using/windows.rst:918
 msgid ""
@@ -2035,11 +2038,12 @@ msgid ""
 "will be appended."
 msgstr ""
 "Cualquier comando que no se encuentre en el archivo .INI se trata como rutas "
-"ejecutables de **Windows** que son absolutas o relativas al directorio que contiene "
-"el archivo de script. Esto es una comodidad para los scripts solo para Windows, "
-"como aquellos generados por un instalador, ya que el comportamiento no es compatible con "
-"los shells al estilo Unix. Estas rutas pueden estar entre comillas y pueden incluir varios "
-"argumentos, tras los cuales se añadirá la ruta al script y cualquier argumento adicional."
+"ejecutables de **Windows** que son absolutas o relativas al directorio que "
+"contiene el archivo de script. Esto es una comodidad para los scripts solo "
+"para Windows, como aquellos generados por un instalador, ya que el "
+"comportamiento no es compatible con los shells al estilo Unix. Estas rutas "
+"pueden estar entre comillas y pueden incluir varios argumentos, tras los "
+"cuales se añadirá la ruta al script y cualquier argumento adicional."
 
 #: ../Doc/using/windows.rst:927
 msgid "Arguments in shebang lines"
@@ -2073,11 +2077,12 @@ msgid ""
 "same .ini files are used for both the 'console' version of the launcher (i."
 "e. py.exe) and for the 'windows' version (i.e. pyw.exe)."
 msgstr ""
-"El lanzador buscará dos archivos .ini - ``py.ini`` en el directorio de "
-"datos de aplicación del usuario actual (``%LOCALAPPDATA%`` o ``$env:LocalAppData``) "
-"y ``py.ini`` en el mismo directorio que el lanzador. Los mismos archivos "
-".ini son utilizados tanto para la versión 'consola' del lanzador (es decir, py.exe) "
-"como para la version 'windows' (es decir pyw.exe)."
+"El lanzador buscará dos archivos .ini - ``py.ini`` en el directorio de datos "
+"de aplicación del usuario actual (``%LOCALAPPDATA%`` o ``$env:"
+"LocalAppData``) y ``py.ini`` en el mismo directorio que el lanzador. Los "
+"mismos archivos .ini son utilizados tanto para la versión 'consola' del "
+"lanzador (es decir, py.exe) como para la version 'windows' (es decir pyw."
+"exe)."
 
 #: ../Doc/using/windows.rst:952
 msgid ""
@@ -2687,8 +2692,8 @@ msgid ""
 "Adds :file:`python{XX}.zip` as a potential landmark when directly adjacent "
 "to the executable."
 msgstr ""
-"Agrega :file:`python{XX}.zip` como un potencial archivo de referencia cuando se "
-"encuentra junto al ejecutable."
+"Agrega :file:`python{XX}.zip` como un potencial archivo de referencia cuando "
+"se encuentra junto al ejecutable."
 
 #: ../Doc/using/windows.rst:1201
 msgid ""
@@ -2807,10 +2812,10 @@ msgid ""
 "have done this, you can distribute your application without requiring your "
 "users to install Python."
 msgstr ""
-"`cx_Freeze <https://cx-freeze.readthedocs.io/en/latest/>`_ envuelve scripts"
-"de Python en programas ejecutables de Windows (archivos :file:`{*}.exe`)."
-"Cuando hayas hecho esto, puedes distribuir tu aplicación sin requerir que"
-"tus usuarios instalen Python."
+"`cx_Freeze <https://cx-freeze.readthedocs.io/en/latest/>`_ envuelve "
+"scriptsde Python en programas ejecutables de Windows (archivos :file:`{*}."
+"exe`).Cuando hayas hecho esto, puedes distribuir tu aplicación sin requerir "
+"quetus usuarios instalen Python."
 
 #: ../Doc/using/windows.rst:1256
 msgid "Compiling Python on Windows"
