--- a/using/windows.po
+++ b/using/windows.po
@@ -355,7 +355,7 @@ msgstr "/desinstalar"
 
 #: ../Doc/using/windows.rst:141
 msgid "to remove Python (without confirmation)"
-msgstr "para eliminar python (sin confirmacion)"
+msgstr "para eliminar Python (sin confirmación)"
 
 #: ../Doc/using/windows.rst:143
 msgid "/layout [directory]"
@@ -1981,7 +1981,7 @@ msgid ""
 "samp:`-V:{TAG}` argument with the complete tag."
 msgstr ""
 "El sufijo \"-64\" está en desuso y ahora implica \"cualquier arquitectura "
-"que no sea comprobablemente i386/32 bits\". Para solicitar un entorno "
+"que comprobable no sea i386/32 bits\". Para solicitar un entorno "
 "específico, use el nuevo argumento :samp:`-V:{TAG}` con la etiqueta completa."
 
 #: ../Doc/using/windows.rst:894
@@ -2813,9 +2813,9 @@ msgid ""
 "users to install Python."
 msgstr ""
 "`cx_Freeze <https://cx-freeze.readthedocs.io/en/latest/>`_ envuelve "
-"scriptsde Python en programas ejecutables de Windows (archivos :file:`{*}."
+"scripts de Python en programas ejecutables de Windows (archivos :file:`{*}."
 "exe`).Cuando hayas hecho esto, puedes distribuir tu aplicación sin requerir "
-"quetus usuarios instalen Python."
+"que tus usuarios instalen Python."
 
 #: ../Doc/using/windows.rst:1256
 msgid "Compiling Python on Windows"
