--- a/using/windows.po
+++ b/using/windows.po
@@ -1981,8 +1981,8 @@ msgid ""
 "samp:`-V:{TAG}` argument with the complete tag."
 msgstr ""
 "El sufijo \"-64\" está en desuso y ahora implica \"cualquier arquitectura "
-"que comprobable no sea i386/32 bits\". Para solicitar un entorno "
-"específico, use el nuevo argumento :samp:`-V:{TAG}` con la etiqueta completa."
+"que comprobable no sea i386/32 bits\". Para solicitar un entorno específico, "
+"use el nuevo argumento :samp:`-V:{TAG}` con la etiqueta completa."
 
 #: ../Doc/using/windows.rst:894
 msgid ""
@@ -2812,10 +2812,10 @@ msgid ""
 "have done this, you can distribute your application without requiring your "
 "users to install Python."
 msgstr ""
-"`cx_Freeze <https://cx-freeze.readthedocs.io/en/latest/>`_ envuelve "
-"scripts de Python en programas ejecutables de Windows (archivos :file:`{*}."
-"exe`).Cuando hayas hecho esto, puedes distribuir tu aplicación sin requerir "
-"que tus usuarios instalen Python."
+"`cx_Freeze <https://cx-freeze.readthedocs.io/en/latest/>`_ envuelve scripts "
+"de Python en programas ejecutables de Windows (archivos :file:`{*}.exe`)."
+"Cuando hayas hecho esto, puedes distribuir tu aplicación sin requerir que "
+"tus usuarios instalen Python."
 
 #: ../Doc/using/windows.rst:1256
 msgid "Compiling Python on Windows"
