Actualizado reference/import.po

--- a/reference/import.po
+++ b/reference/import.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-10-12 19:43+0200\n"
-"PO-Revision-Date: 2021-08-02 19:27+0200\n"
+"PO-Revision-Date: 2023-10-16 16:15+0530\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.13.0\n"
+"X-Generator: Poedit 3.4\n"
 
 #: ../Doc/reference/import.rst:6
 msgid "The import system"
@@ -644,7 +645,6 @@ msgstr ""
 "finder`)."
 
 #: ../Doc/reference/import.rst:325
-#, fuzzy
 msgid ""
 "The :meth:`~importlib.abc.MetaPathFinder.find_spec` method of meta path "
 "finders replaced :meth:`!find_module`, which is now deprecated.  While it "
@@ -652,23 +652,22 @@ msgid ""
 "if the finder does not implement ``find_spec()``."
 msgstr ""
 "El método :meth:`~importlib.abc.MetaPathFinder.find_spec` de los buscadores "
-"de metarutas de la ruta de acceso reemplazó :meth:`~importlib.abc."
-"MetaPathFinder.find_module`, que ahora está en desuso. Aunque seguirá "
-"funcionando sin cambios, la maquinaria de importación sólo lo intentará si "
-"el buscador no implementa ``find_spec()``."
+"de rutas de metadatos reemplazó a :meth:`!find_module`, el cual ahora está "
+"obsoleto. Aunque seguirá funcionando sin cambios, la maquinaria de "
+"importación solo lo intentará si el buscador no implementa ``find_spec()``."
 
 #: ../Doc/reference/import.rst:332
-#, fuzzy
 msgid ""
 "Use of :meth:`!find_module` by the import system now raises :exc:"
 "`ImportWarning`."
 msgstr ""
-"El uso de :meth:`~importlib.abc.MetaPathFinder.find_module` por parte del "
-"sistema de importación ahora lanza :exc:`ImportWarning`."
+"El uso de :meth:`!find_module` por parte del sistema de importación ahora "
+"genera una :exc:`ImportWarning`."
 
 #: ../Doc/reference/import.rst:336
 msgid "``find_module()`` has been removed.  Use :meth:`find_spec` instead."
 msgstr ""
+"``find_module()`` ha sido eliminado. Utiliza :meth:`find_spec` en su lugar."
 
 #: ../Doc/reference/import.rst:341
 msgid "Loading"
@@ -1034,6 +1033,9 @@ msgid ""
 "It is **strongly** recommended that you rely on :attr:`__spec__` and its "
 "attributes instead of any of the other individual attributes listed below."
 msgstr ""
+"Se **recomienda enfáticamente** que te bases en :attr:`__spec__` y sus "
+"atributos en lugar de cualquiera de los otros atributos individuales que se "
+"enumeran a continuación."
 
 #: ../Doc/reference/import.rst:550
 msgid ""
@@ -1063,6 +1065,8 @@ msgid ""
 "It is **strongly** recommended that you rely on :attr:`__spec__` instead "
 "instead of this attribute."
 msgstr ""
+"Se **recomienda enfáticamente** que te bases en :attr:`__spec__` en lugar de "
+"este atributo."
 
 #: ../Doc/reference/import.rst:564
 msgid ""
@@ -1070,9 +1074,11 @@ msgid ""
 "loader``.  The use of ``__loader__`` is deprecated and slated for removal in "
 "Python 3.14."
 msgstr ""
+"Se espera que el valor de ``__loader__`` sea el mismo que ``__spec__."
+"loader``. El uso de ``__loader__`` está en desuso y está programado para ser "
+"eliminado en Python 3.14."
 
 #: ../Doc/reference/import.rst:571
-#, fuzzy
 msgid ""
 "The module's ``__package__`` attribute may be set.  Its value must be a "
 "string, but it can be the same value as its ``__name__``.  When the module "
@@ -1081,24 +1087,22 @@ msgid ""
 "string for top-level modules, or for submodules, to the parent package's "
 "name.  See :pep:`366` for further details."
 msgstr ""
-"Se debe establecer el atributo ``__package__`` del módulo.  Su valor debe "
-"ser una cadena, pero puede ser el mismo valor que su ``__name__``.  Cuando "
-"el módulo es un paquete, su valor ``__package__`` debe establecerse en su "
-"``__name__``.  Cuando el módulo no es un paquete, ``__package__`` debe "
-"establecerse en la cadena vacía para los módulos de nivel superior, o para "
-"los submódulos, en el nombre del paquete primario.  Consulte :pep:`366` para "
-"obtener más detalles."
+"El atributo ``__package__`` del módulo se puede establecer. Su valor debe "
+"ser una cadena, pero puede ser el mismo valor que su atributo ``__name__``. "
+"Cuando el módulo es un paquete, el valor de su atributo ``__package__`` debe "
+"establecerse con el valor de su atributo ``__name__``. Cuando el módulo no "
+"es un paquete, ``__package__`` debe establecerse como una cadena vacía para "
+"los módulos de nivel superior o, para los submódulos, con el nombre del "
+"paquete padre. Consulta :pep:`366` para más detalles."
 
 #: ../Doc/reference/import.rst:579
-#, fuzzy
 msgid ""
 "This attribute is used instead of ``__name__`` to calculate explicit "
 "relative imports for main modules, as defined in :pep:`366`."
 msgstr ""
 "Este atributo se utiliza en lugar de ``__name__`` para calcular "
-"importaciones relativas explícitas para los módulos principales, tal como se "
-"define en :pep:`366`. Se espera que tenga el mismo valor que ``__spec__."
-"parent``."
+"importaciones relativas explícitas en los módulos principales, como se "
+"define en :pep:`366`."
 
 #: ../Doc/reference/import.rst:585
 msgid ""
@@ -1113,12 +1117,16 @@ msgid ""
 ":exc:`ImportWarning` is raised if import falls back to ``__package__`` "
 "instead of :attr:`~importlib.machinery.ModuleSpec.parent`."
 msgstr ""
+"Se genera una :exc:`ImportWarning` si la importación recurre a "
+"``__package__`` en lugar de a :attr:`~importlib.machinery.ModuleSpec.parent`."
 
 #: ../Doc/reference/import.rst:594
 msgid ""
 "Raise :exc:`DeprecationWarning` instead of :exc:`ImportWarning` when falling "
 "back to ``__package__``."
 msgstr ""
+"Genera una :exc:`DeprecationWarning` en lugar de una :exc:`ImportWarning` al "
+"recurrir a ``__package__``."
 
 #: ../Doc/reference/import.rst:601
 msgid ""
@@ -1135,12 +1143,11 @@ msgstr ""
 "``__spec__`` es :ref:`establecido None en algunos casos <main_spec>`."
 
 #: ../Doc/reference/import.rst:607
-#, fuzzy
 msgid ""
 "When ``__spec__.parent`` is not set, ``__package__`` is used as a fallback."
 msgstr ""
-"Cuando ``__package__`` no está definido, ``__spec__.parent`` se utiliza como "
-"reserva."
+"Cuando ``__spec__.parent`` no está configurado, se utiliza ``__package__`` "
+"como recurso secundario o alternativo."
 
 #: ../Doc/reference/import.rst:612
 msgid ""
@@ -1226,6 +1233,8 @@ msgid ""
 "It is **strongly** recommended that you rely on :attr:`__spec__` instead "
 "instead of ``__cached__``."
 msgstr ""
+"Se **recomienda enfáticamente** que te bases en :attr:`__spec__` en lugar de "
+"en ``__cached__``."
 
 #: ../Doc/reference/import.rst:658
 msgid "module.__path__"
@@ -1356,6 +1365,9 @@ msgid ""
 "removed in Python 3.12 and is no longer called during the resolution of a "
 "module's repr."
 msgstr ""
+"El uso de :meth:`!module_repr`, que ha estado en desuso desde Python 3.4, "
+"fue eliminado en Python 3.12 y ya no se llama durante la representación de "
+"un módulo."
 
 #: ../Doc/reference/import.rst:716
 msgid "Cached bytecode invalidation"
@@ -1607,7 +1619,6 @@ msgstr ""
 "una importación de nivel superior y se utiliza :data:`sys.path`."
 
 #: ../Doc/reference/import.rst:832
-#, fuzzy
 msgid ""
 "The path based finder iterates over every entry in the search path, and for "
 "each of these, looks for an appropriate :term:`path entry finder` (:class:"
@@ -1622,20 +1633,20 @@ msgid ""
 "cache entries from :data:`sys.path_importer_cache` forcing the path based "
 "finder to perform the path entry search again."
 msgstr ""
-"El buscador basado en la ruta itera sobre cada entrada en la ruta de "
-"búsqueda y, para cada una de ellas, busca un :term:`path entry finder` (:"
-"class:`~importlib.abc.PathEntryFinder`) apropiado para la entrada de la "
-"ruta. Debido a que esta puede ser una operación costosa (por ejemplo, puede "
-"haber gastos generales de llamadas ``stat()`` para esta búsqueda), el "
-"buscador basado en rutas mantiene una caché que asigna entradas de rutas a "
-"buscadores de entradas de rutas. Esta memoria caché se mantiene en :data:"
-"`sys.path_importer_cache` (a pesar del nombre, esta memoria caché en "
-"realidad almacena objetos de búsqueda en lugar de limitarse a objetos :term:"
-"`importer`). De esta forma, la costosa búsqueda del :term:`path entry "
-"finder` de una ubicación :term:`path entry` en particular solo debe "
-"realizarse una vez. El código de usuario es libre de eliminar entradas de "
-"caché de :data:`sys.path_importer_cache`, lo que obliga al buscador basado "
-"en rutas a realizar la búsqueda de entrada de ruta nuevamente [#fnpic]_."
+"El buscador basado en rutas itera sobre cada entrada en la ruta de búsqueda "
+"y, para cada una de estas, busca un buscador de entradas de ruta apropiado (:"
+"class:`~importlib.abc.PathEntryFinder`) para la entrada de ruta. Dado que "
+"esto puede ser una operación costosa (por ejemplo, puede haber sobrecargas "
+"de llamadas a ``stat()`` para esta búsqueda), el buscador basado en rutas "
+"mantiene una caché que asigna las entradas de ruta a los buscadores de "
+"entradas de ruta. Esta caché se mantiene en :data:`sys.path_importer_cache` "
+"(a pesar del nombre, esta caché realmente almacena objetos buscadores en "
+"lugar de estar limitada a objetos :term:`importer`). De esta manera, la "
+"búsqueda costosa de un buscador de entrada de ruta de una ubicación de :term:"
+"`entrada de ruta` en particular solo se hace una vez. El código del usuario "
+"tiene la libertad de eliminar entradas de la caché en :data:`sys."
+"path_importer_cache`, lo que obliga al buscador basado en rutas a realizar "
+"la búsqueda de entrada de ruta nuevamente."
 
 #: ../Doc/reference/import.rst:845
 msgid ""
@@ -1746,28 +1757,25 @@ msgstr ""
 "establecido (con una excepción)."
 
 #: ../Doc/reference/import.rst:892
-#, fuzzy
 msgid ""
 "To indicate to the import machinery that the spec represents a namespace :"
 "term:`portion`, the path entry finder sets ``submodule_search_locations`` to "
 "a list containing the portion."
 msgstr ""
 "Para indicar a la maquinaria de importación que la especificación representa "
-"un espacio de nombres :term:`portion`, el buscador de entrada de ruta "
-"establece *\"submodule_search_locations\"* en una lista que contiene la "
+"una :term:`porción` de espacio de nombres, el buscador de entradas de ruta "
+"establece ``submodule_search_locations`` en una lista que contiene la "
 "porción."
 
 #: ../Doc/reference/import.rst:896
-#, fuzzy
 msgid ""
 ":meth:`~importlib.abc.PathEntryFinder.find_spec` replaced :meth:`!"
 "find_loader` and :meth:`!find_module`, both of which are now deprecated, but "
 "will be used if ``find_spec()`` is not defined."
 msgstr ""
-":meth:`~importlib.abc.PathEntryFinder.find_spec` reemplazó a :meth:"
-"`~importlib.abc.PathEntryFinder.find_loader` y :meth:`~importlib.abc."
-"PathEntryFinder.find_module`, los cuales ahora están en desuso, pero se "
-"utilizarán si ``find_spec()`` no está definido."
+"El método :meth:`~importlib.abc.PathEntryFinder.find_spec` reemplazó a los "
+"métodos :meth:`!find_loader` y :meth:`!find_module`, ambos de los cuales "
+"están ahora en desuso, pero se utilizarán si no se define ``find_spec()``."
 
 #: ../Doc/reference/import.rst:902
 msgid ""
@@ -1783,16 +1791,16 @@ msgstr ""
 "ruta, se omiten los métodos heredados."
 
 #: ../Doc/reference/import.rst:907
-#, fuzzy
 msgid ""
 ":meth:`!find_loader` takes one argument, the fully qualified name of the "
 "module being imported.  ``find_loader()`` returns a 2-tuple where the first "
 "item is the loader and the second item is a namespace :term:`portion`."
 msgstr ""
-":meth:`~importlib.abc.PathEntryFinder.find_loader` toma un argumento, el "
-"nombre completo del módulo que se está importando. ``find_loader()`` retorna "
-"una 2-tupla donde el primer elemento es el cargador y el segundo elemento es "
-"un espacio de nombres :term:`portion`."
+"El método :meth:`!find_loader` toma un argumento, que es el nombre "
+"completamente calificado del módulo que se está importando. "
+"``find_loader()`` devuelve una tupla de 2 elementos, donde el primer "
+"elemento es el cargador y el segundo elemento es una :term:`porción` de "
+"espacio de nombres."
 
 #: ../Doc/reference/import.rst:912
 msgid ""
@@ -1827,18 +1835,16 @@ msgstr ""
 "``find_module()``."
 
 #: ../Doc/reference/import.rst:925
-#, fuzzy
 msgid ""
 "Calls to :meth:`!find_module` and :meth:`!find_loader` by the import system "
 "will raise :exc:`ImportWarning`."
 msgstr ""
-"Las llamadas a :meth:`~importlib.abc.PathEntryFinder.find_module` y :meth:"
-"`~importlib.abc.PathEntryFinder.find_loader` por parte del sistema de "
-"importación lanzarán :exc:`ImportWarning`."
+"Las llamadas a los métodos :meth:`!find_module` y :meth:`!find_loader` por "
+"parte del sistema de importación generarán una :exc:`ImportWarning`."
 
 #: ../Doc/reference/import.rst:930
 msgid "``find_module()`` and ``find_loader()`` have been removed."
-msgstr ""
+msgstr "``find_module()`` y ``find_loader()`` han sido eliminados."
 
 #: ../Doc/reference/import.rst:935
 msgid "Replacing the standard import system"
@@ -2057,15 +2063,14 @@ msgstr ""
 "posterior extensión en :pep:`420`."
 
 #: ../Doc/reference/import.rst:1053
-#, fuzzy
 msgid ""
 ":pep:`420` introduced :term:`namespace packages <namespace package>` for "
 "Python 3.3.  :pep:`420` also introduced the :meth:`!find_loader` protocol as "
 "an alternative to :meth:`!find_module`."
 msgstr ""
-":pep:`420` introdujo :term:`paquetes de espacio de nombres <namespace "
-"package>` para Python 3.3.  :pep:`420` también introdujo el protocolo :meth:"
-"`find_loader` como alternativa a :meth:`find_module`."
+"La :pep:`420` introdujo los :term:`paquetes de espacio de nombres <namespace "
+"package>` para Python 3.3. Además, la :pep:`420` también introdujo el "
+"protocolo :meth:`!find_loader` como una alternativa a :meth:`!find_module`."
 
 #: ../Doc/reference/import.rst:1057
 msgid ""
@@ -2128,108 +2133,96 @@ msgstr ""
 
 #: ../Doc/reference/import.rst:8
 msgid "import machinery"
-msgstr ""
+msgstr "maquinaria de importación"
 
 #: ../Doc/reference/import.rst:64 ../Doc/reference/import.rst:95
 #: ../Doc/reference/import.rst:129
-#, fuzzy
 msgid "package"
-msgstr "Paquetes"
+msgstr "paquetes"
 
 #: ../Doc/reference/import.rst:95
-#, fuzzy
 msgid "regular"
-msgstr "Paquetes regulares"
+msgstr "paquetes regulares"
 
 #: ../Doc/reference/import.rst:129
-#, fuzzy
 msgid "namespace"
-msgstr "Paquetes de espacio de nombres"
+msgstr "espacio de nombres"
 
 #: ../Doc/reference/import.rst:129
 msgid "portion"
-msgstr ""
+msgstr "porción"
 
 #: ../Doc/reference/import.rst:175
-#, fuzzy
 msgid "sys.modules"
-msgstr "Submódulos"
+msgstr "sys.modules"
 
 #: ../Doc/reference/import.rst:210 ../Doc/reference/import.rst:276
 msgid "finder"
-msgstr ""
+msgstr "buscador"
 
 #: ../Doc/reference/import.rst:210
-#, fuzzy
 msgid "loader"
-msgstr "Cargadores"
+msgstr "cargadores"
 
 #: ../Doc/reference/import.rst:210
-#, fuzzy
 msgid "module spec"
-msgstr "Especificaciones del módulo"
+msgstr "especificaciones del módulo"
 
 #: ../Doc/reference/import.rst:249
-#, fuzzy
 msgid "import hooks"
-msgstr "Ganchos de importación"
+msgstr "ganchos de importación"
 
 #: ../Doc/reference/import.rst:249
-#, fuzzy
 msgid "meta hooks"
-msgstr "Ganchos de importación"
+msgstr "ganchos meta"
 
 #: ../Doc/reference/import.rst:249
-#, fuzzy
 msgid "path hooks"
-msgstr "Ganchos de importación"
+msgstr "ganchos de ruta"
 
 #: ../Doc/reference/import.rst:249
 msgid "hooks"
-msgstr ""
+msgstr "ganchos"
 
 #: ../Doc/reference/import.rst:249
-#, fuzzy
 msgid "import"
-msgstr "Ganchos de importación"
+msgstr "importar"
 
 #: ../Doc/reference/import.rst:249
 msgid "meta"
-msgstr ""
+msgstr "*meta*"
 
 #: ../Doc/reference/import.rst:249
 msgid "path"
-msgstr ""
+msgstr "ruta"
 
 #: ../Doc/reference/import.rst:276
-#, fuzzy
 msgid "sys.meta_path"
-msgstr "La meta ruta (*path*)"
+msgstr "*sys.meta_path*"
 
 #: ../Doc/reference/import.rst:276
 msgid "find_spec"
-msgstr ""
+msgstr "*find_spec*"
 
 #: ../Doc/reference/import.rst:744
-#, fuzzy
 msgid "path based finder"
-msgstr "El buscador basado en rutas"
+msgstr "buscador basado en rutas"
 
 #: ../Doc/reference/import.rst:793
 msgid "sys.path"
-msgstr ""
+msgstr "*sys.path*"
 
 #: ../Doc/reference/import.rst:793
 msgid "sys.path_hooks"
-msgstr ""
+msgstr "*sys.path_hooks*"
 
 #: ../Doc/reference/import.rst:793
 msgid "sys.path_importer_cache"
-msgstr ""
+msgstr "*sys.path_importer_cache*"
 
 #: ../Doc/reference/import.rst:793
 msgid "PYTHONPATH"
-msgstr ""
+msgstr "*PYTHONPATH*"
 
 #~ msgid ""
 #~ "Use of :meth:`loader.module_repr() <importlib.abc.Loader.module_repr>` "
